--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,4 @@
-<div class="m-5">
-    <h1>Mi aplicación Secreta</h1>
-    <hr>
-
-    <button class="btn btn-outline-danger" (click)="salir()">Cerrar Sesión</button>
-</div>
+<app-header></app-header>
 
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
