--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,43 +1,48 @@
 <div class="limiter animated fadeInDown">
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-body">
+                    <form (ngSubmit)="login( f )" #f="ngForm" class="login100-form validate-form flex-sb flex-w">
 
-    <div class="container-login100">
-        <div class="wrap-login100 p-t-50 p-b-90">
-            <form (ngSubmit)="login( f )" #f="ngForm" class="login100-form validate-form flex-sb flex-w">
+                        <span class="login100-form-title p-b-51">
+                            Iniciar sesión
+                        </span>
 
-                <span class="login100-form-title p-b-51">
-                    Iniciar sesión
-                </span>
+                        <span *ngIf="f.submitted && f.controls['username'].errors" class="text-danger animated fadeIn">El nombre de usuario es obligatorio</span>
+                        <div class="wrap-input100 m-b-16">
+                            <input class="input100" type="text" name="username" [(ngModel)]="usuario.name" required placeholder="Nombre de Usuario">
 
-                <span *ngIf="f.submitted && f.controls['username'].errors" class="text-danger animated fadeIn">El nombre de usuario es obligatorio</span>
-                <div class="wrap-input100 m-b-16">
-                    <input class="input100" type="text" name="username" [(ngModel)]="usuario.name" required placeholder="Nombre de Usuario">
+                            <span class="focus-input100"></span>
+                        </div>
 
-                    <span class="focus-input100"></span>
+                        <span *ngIf="f.submitted && f.controls['password'].errors" class="text-danger animated fadeIn">La contraseña debe de ser más de 6 letras</span>
+                        <div class="wrap-input100 m-b-16">
+                            <input class="input100" type="password" required minlength="6" name="password" [(ngModel)]="usuario.password" placeholder="Contraseña">
+                            <span class="focus-input100"></span>
+                        </div>
+
+                        <div class="flex-sb-m w-full p-t-3 p-b-24">
+                            <div class="contact100-form-checkbox">
+                                <input [(ngModel)]="recordarme" class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                                <label class="label-checkbox100" for="ckb1">
+                                    Recordar mi usuario
+                                </label>
+                            </div>
+
+                        </div>
+
+                        <div class="container-login100-form-btn m-t-17">
+                            <button class="login100-form-btn" type="submit">
+                                Ingresar
+                            </button>
+                        </div>
+
+                    </form>
                 </div>
-
-                <span *ngIf="f.submitted && f.controls['password'].errors" class="text-danger animated fadeIn">La contraseña debe de ser más de 6 letras</span>
-                <div class="wrap-input100 m-b-16">
-                    <input class="input100" type="password" required minlength="6" name="password" [(ngModel)]="usuario.password" placeholder="Contraseña">
-                    <span class="focus-input100"></span>
-                </div>
-
-                <div class="flex-sb-m w-full p-t-3 p-b-24">
-                    <div class="contact100-form-checkbox">
-                        <input [(ngModel)]="recordarme" class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                        <label class="label-checkbox100" for="ckb1">
-                            Recordar mi usuario
-                        </label>
-                    </div>
-
-                </div>
-
-                <div class="container-login100-form-btn m-t-17">
-                    <button class="login100-form-btn" type="submit">
-                        Ingresar
-                    </button>
-                </div>
-
-            </form>
+            </div>
         </div>
+        <!-- /.col-->
     </div>
+    <!-- /.row -->
 </div>
