--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -1,3 +1,61 @@
-<p>
-  patients works!
-</p>
+<app-header></app-header>
+
+<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Listado de Pacientes</h1>
+        </div>
+    </div>
+    <!--/.row-->
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col text-right">
+                <button routerLink="/patient/nuevo" class="btn btn-primary">
+                  <i class="fa fa-plus"></i> Agregar
+                </button>
+            </div>
+        </div>
+
+        <table class="table mt-3 table-hover animated fadeIn">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Expediente</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Fecha de Nacimiento</th>
+                    <th scope="col">Fase</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="alert alert-warning text-center mt-3">
+            <h4 class="alert-heading">Cargando</h4>
+            <p>
+                <i class="fa fa-exclamation fa-2x"></i>
+            </p>
+            <p class="mb-0">
+                Espere por favor
+            </p>
+        </div>
+
+        <div class="alert alert-info text-center mt-3">
+            <h4 class="alert-heading">Cargando</h4>
+            <p>
+                <i class="fa fa-refresh fa-spin fa-2x"></i>
+            </p>
+            <p class="mb-0">
+                Espere por favor
+            </p>
+        </div>
+
+    </div>
+</div>
