--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -3,7 +3,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Nuevo Paciente</h1>
+            <h1 class="page-header">Paciente</h1>
         </div>
     </div>
     <!--/.row-->
@@ -24,10 +24,14 @@
         <div class="row animated fadeIn faster">
             <div class="col">
                 <form (ngSubmit)="guardar( f )" #f="ngForm">
-                    <div class="form-group">
-                        <label>Folio expediente</label>
-                        <input type="text" [(ngModel)]="patient.expedient" name="expedient" class="form-control" disabled="disabled" placeholder="Folio expediente">
-                        <small class="form-text text-muted">Este campo es autogenerado</small>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label>Folio expediente</label>
+                                <input type="text" [(ngModel)]="patient.expedient" name="expedient" class="form-control" disabled="disabled" placeholder="Folio expediente">
+                                <small class="form-text text-muted">Este campo es autogenerado</small>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
