--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,10 +25,10 @@
     <ul class="nav menu">
         <li routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li>
         <li routerLinkActive="active"><a routerLink="/patients"><em class="fa fa-user-circle">&nbsp;</em> Pacientes</a></li>
-        <li routerLinkActive="active"><a routerLink="/dailyrecord"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
-        <li routerLinkActive="active"><a routerLink="/catalog"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li>
-        <li routerLinkActive="active"><a routerLink="/user"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
-        <li routerLinkActive="active"><a routerLink="/chart"><em class="fa fa-bar-chart">&nbsp;</em> Gráficas</a></li>
+        <li routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
+        <!-- <li routerLinkActive="active"><a routerLink="/#"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li> -->
+        <li routerLinkActive="active"><a routerLink="/users"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
+        <!-- <li routerLinkActive="active"><a routerLink="/#"><em class="fa fa-bar-chart">&nbsp;</em> Gráficas</a></li> -->
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
 </div>
