--- a/src/app/pages/dailyrecords/dailyrecords.component.html
+++ b/src/app/pages/dailyrecords/dailyrecords.component.html
@@ -33,10 +33,10 @@
             <tbody>
                 <tr *ngFor="let dr of drs; let i = index">
                     <th scope="row">{{ i+1}} </th>
-                    <td>{{ dr.date }}</td>
+                    <td>{{ dr.date |date:"dd-MM-yyyy" }}</td>
                     <td>{{ dr.patient.name }} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</td>
-                    <td>{{ dr.date }}</td>
-                    <td>{{ dr.exitHour }}</td>
+                    <td>{{ dr.date |date:"h:mm a"}}</td>
+                    <td>{{ dr.exitHour |date:"h:mm a"}}</td>
                     <td>
                         <button class="btn btn-info mr-1" [routerLink]="['/dr', dr._id ]">
                             <i class="fa fa-search"></i>
