Ajuste a notificaciones y catalogs

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
                                 </div>
                                 <div class="col-xs-10 col-md-10">
                                     <h3>{{noti.patient.name}} {{noti.patient.lastName}} {{noti.patient.lastNameSecond}}</h3>
-                                    <h4><a href="">{{noti.type}}</a></h4>
+                                    <h4>{{noti.type}}</h4>
                                     <p>{{noti.description}}</p>
                                 </div>
                             </div>
